--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,16 @@
 
   <title>eKYC</title>
   <base href="/">
-
+  <style>
+    body{
+    background-image: url("https://www.hdwallpapers.in/walls/3d_dark_traingles-wide.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position:center;
+    -webkit-background-size: cover;
+    overflow-y: hidden;
+}
+  </style>
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
