--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body  background="assets/images/background/page-top.jpg">
+<body>
   <app-root>
     <div class="loader"></div>  
   </app-root>
